--- a/public/index.html
+++ b/public/index.html
@@ -307,12 +307,15 @@
 
                             <div class="portfolio-title">
                                 <h5>
-                                    About Abdullah
+                                    Abdullah Hashemi - Founder & Lead Consultant
                                 </h5>
                             </div>
                             <div class="portfolio-info">
                                 <p>
-                                    Inspired him
+                                    Abdullah Hashemi heads a distinguished HR and Recruitment consultancy dedicated to empowering tech firms. With a focus on talent acquisition, establishing satellite offices in Canada, and enhancing team engagement, Abdullah's expertise is pivotal in driving organizational growth and efficiency. His personalized approach in 1-on-1 performance coaching and manager training, particularly in effective feedback cycles, sets a high standard in leadership development within the tech industry.
+                                </p>
+                                <p>
+                                    Under his guidance, the consultancy also prioritizes health and wellness initiatives, recognizing their importance in workplace productivity and employee satisfaction. Abdullah's visionary leadership and commitment to excellence position his consultancy as a cornerstone for tech firms looking to scale and thrive in a competitive market.
                                 </p>
                             </div>
                         </div>
@@ -541,7 +544,7 @@
                     <img src="./images/footer-logo.png" alt="">
                 </div>
                 <div>
-                    <p>© 2023 by <b>MetanoiaHR.</b> All Rights Reserved.</p>
+                    <p>© 2024 by <b>MetanoiaHR.</b> All Rights Reserved.</p>
                     <a href="linkedin.com/in/abdullahhashemi">
                         <i class="fa fa-linkedin ">
                         </i>
