favour's testimonial edited

--- a/public/index.html
+++ b/public/index.html
@@ -376,7 +376,7 @@
                     </div>
                     <div class="testimonial-items swiper-slide">
                         <div class="testimonial-flex">
-                            <div>
+                            <div class="fav-img">
                                 <img src="./images/favour.png" alt="">
                             </div>
                             <div class="testimonial-text">
@@ -384,7 +384,7 @@
                                     Favour Nwachukwu
                                 </h5>
                                 <p>
-                                    Software Developer at Knfrmd Web Corp
+                                    Software Developer at WPN
                                 </p>
                             </div>
                         </div>
