--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
                     <li class="lists"><a href="#testimonials">Testimonials</a></li>
                     <li class="lists"><a href="#faq">FAQs</a></li>
                 </ul>
-                <button class="buttons"> <a href="mailto:abdullah@metanoihr.com"> Book A Call</a></button>
+                <button class="buttons"> <a href="#form"> Book A Call</a></button>
             </div>
     
             <div class="nav-icon">
@@ -49,7 +49,7 @@
             <li class="lists"><a href="#testimonials">Testimonials</a></li>
             <li class="lists"><a href="#faq">FAQs</a></li>
             <li>
-                <button class="buttons"> <a href="mailto:abdullah@metanoihr.com"> Book A Call</a></button>
+                <button class="buttons"> <a href="#form"> Book A Call</a></button>
     
             </li>
             <div class="close-mobile-menu"><img src="./images/times-svgrepo-com.svg" alt="Close menu"></div>
