--- a/public/index.html
+++ b/public/index.html
@@ -615,7 +615,12 @@
                         slidesPerView: 2,
                         spaceBetween: 20
                     },
-                    800: {
+                    850: {
+                        slidesPerView: 3,
+                        spaceBetween: 30
+                    }
+                    ,
+                    1050: {
                         slidesPerView: 4,
                         spaceBetween: 30
                     }
