--- a/public/index.html
+++ b/public/index.html
@@ -461,7 +461,7 @@
 
                                 </h5>
                                 <p>
-                                    Co-founder, Modu Research
+                                    Co-founder, Modu Research (Techstars ‘20)
 
                                 </p>
                             </div>
@@ -676,47 +676,51 @@
                     </div>
 
                     <div class="blogs-items swiper-slide">
-                        <a href="https://www.linkedin.com/posts/abdullahhashemi_lets-talk-about-pitching-on-linkedin-throughout-activity-7120379957708476416-LV76?utm_source=share&utm_medium=member_desktop">
-                        <div class="blogs-flex">
-                            <div class="blogs-image">
-                                <img src="./images/pitching-on-linkedin.jpeg" alt="">
-                            </div>
-                            <div class="blogs-text">
-                                <h5>
-                                    Pitching On LinkedIn!
-                                </h5>
-                                <p>
-                                    By Abdullah
-                                </p>
-                                <a href="https://www.linkedin.com/posts/abdullahhashemi_lets-talk-about-pitching-on-linkedin-throughout-activity-7120379957708476416-LV76?utm_source=share&utm_medium=member_desktop">Read More</a>
+                        <a
+                            href="https://www.linkedin.com/posts/abdullahhashemi_lets-talk-about-pitching-on-linkedin-throughout-activity-7120379957708476416-LV76?utm_source=share&utm_medium=member_desktop">
+                            <div class="blogs-flex">
+                                <div class="blogs-image">
+                                    <img src="./images/pitching-on-linkedin.jpeg" alt="">
+                                </div>
+                                <div class="blogs-text">
+                                    <h5>
+                                        Pitching On LinkedIn!
+                                    </h5>
+                                    <p>
+                                        By Abdullah
+                                    </p>
+                                    <a
+                                        href="https://www.linkedin.com/posts/abdullahhashemi_lets-talk-about-pitching-on-linkedin-throughout-activity-7120379957708476416-LV76?utm_source=share&utm_medium=member_desktop">Read
+                                        More</a>
 
+                                </div>
                             </div>
-                        </div>
-</a>
+                        </a>
                     </div>
                     <div class="blogs-items swiper-slide">
-                        <a href="https://www.linkedin.com/posts/abdullahhashemi_id-like-to-share-an-interesting-study-from-activity-7107715302351638528-lgjY?utm_source=share&utm_medium=member_desktop">
-                        <div class="blogs-flex ">
-                            <div class="fav-img blogs-image">
-                                <img src="./images/job-of-us-workers.jpeg" alt="">
-                            </div>
-                            <div class="blogs-text">
-                                <h5>
-                                The Job History Of More Than 1.2 Million US Workers
-                                </h5>
-                                <p>
-                                    By Abdullah
-                                </p>
-                                <a
-                                    href="https://www.linkedin.com/posts/abdullahhashemi_id-like-to-share-an-interesting-study-from-activity-7107715302351638528-lgjY?utm_source=share&utm_medium=member_desktop">Read
-                                    More</a>
+                        <a
+                            href="https://www.linkedin.com/posts/abdullahhashemi_id-like-to-share-an-interesting-study-from-activity-7107715302351638528-lgjY?utm_source=share&utm_medium=member_desktop">
+                            <div class="blogs-flex ">
+                                <div class="fav-img blogs-image">
+                                    <img src="./images/job-of-us-workers.jpeg" alt="">
+                                </div>
+                                <div class="blogs-text">
+                                    <h5>
+                                        The Job History Of More Than 1.2 Million US Workers
+                                    </h5>
+                                    <p>
+                                        By Abdullah
+                                    </p>
+                                    <a
+                                        href="https://www.linkedin.com/posts/abdullahhashemi_id-like-to-share-an-interesting-study-from-activity-7107715302351638528-lgjY?utm_source=share&utm_medium=member_desktop">Read
+                                        More</a>
 
+                                </div>
                             </div>
-                        </div>
                         </a>
 
                     </div>
-                 
+
                 </div>
                 <div class="swiper-pagination"></div>
             </div>
