added the new blog posts

--- a/public/index.html
+++ b/public/index.html
@@ -677,20 +677,20 @@
 
                     <div class="blogs-items swiper-slide">
                         <a
-                            href="https://www.linkedin.com/posts/abdullahhashemi_lets-talk-about-pitching-on-linkedin-throughout-activity-7120379957708476416-LV76?utm_source=share&utm_medium=member_desktop">
+                            href="https://www.linkedin.com/pulse/effective-11-manager-meeting-metanoiahumanresources-ukj5e%3FtrackingId=MKZ3nixcoC8Gtv9smwokVg%253D%253D/?trackingId=MKZ3nixcoC8Gtv9smwokVg%3D%3D">
                             <div class="blogs-flex">
                                 <div class="blogs-image">
-                                    <img src="./images/pitching-on-linkedin.jpeg" alt="">
+                                    <img src="./images/Effective-1-Manager-Meeting.jpg" alt="">
                                 </div>
                                 <div class="blogs-text">
                                     <h5>
-                                        Pitching On LinkedIn!
+                                        Effective 1:1 Manager Meeting
                                     </h5>
                                     <p>
                                         By Abdullah
                                     </p>
                                     <a
-                                        href="https://www.linkedin.com/posts/abdullahhashemi_lets-talk-about-pitching-on-linkedin-throughout-activity-7120379957708476416-LV76?utm_source=share&utm_medium=member_desktop">Read
+                                        href="https://www.linkedin.com/pulse/effective-11-manager-meeting-metanoiahumanresources-ukj5e%3FtrackingId=MKZ3nixcoC8Gtv9smwokVg%253D%253D/?trackingId=MKZ3nixcoC8Gtv9smwokVg%3D%3D">Read
                                         More</a>
 
                                 </div>
@@ -699,20 +699,20 @@
                     </div>
                     <div class="blogs-items swiper-slide">
                         <a
-                            href="https://www.linkedin.com/posts/abdullahhashemi_id-like-to-share-an-interesting-study-from-activity-7107715302351638528-lgjY?utm_source=share&utm_medium=member_desktop">
+                            href="https://www.linkedin.com/pulse/dual-nature-friction-metanoiahumanresources-40gte%3FtrackingId=93G5bnPxetIoUiWE29HlCg%253D%253D/?trackingId=93G5bnPxetIoUiWE29HlCg%3D%3D">
                             <div class="blogs-flex ">
                                 <div class="fav-img blogs-image">
-                                    <img src="./images/job-of-us-workers.jpeg" alt="">
+                                    <img src="./images/The-Dual-Nature-of-Friction.jpg" alt="">
                                 </div>
                                 <div class="blogs-text">
                                     <h5>
-                                        The Job History Of More Than 1.2 Million US Workers
+                                        The Dual Nature of Friction
                                     </h5>
                                     <p>
                                         By Abdullah
                                     </p>
                                     <a
-                                        href="https://www.linkedin.com/posts/abdullahhashemi_id-like-to-share-an-interesting-study-from-activity-7107715302351638528-lgjY?utm_source=share&utm_medium=member_desktop">Read
+                                        href="https://www.linkedin.com/pulse/dual-nature-friction-metanoiahumanresources-40gte%3FtrackingId=93G5bnPxetIoUiWE29HlCg%253D%253D/?trackingId=93G5bnPxetIoUiWE29HlCg%3D%3D">Read
                                         More</a>
 
                                 </div>
