--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     <div class="container">
         <header>
             <div class="navbar">
-                <div>
+                <div class = 'logo'>
                     <img src="./images/logo.png" alt="">
                 </div>
                 <div class="nav-list">
@@ -35,7 +35,7 @@
                         <li class="lists"><a href="#faq">FAQs</a></li>
                         <li class="lists"><a href="#blogs">Blogs</a></li>
                     </ul>
-                    <button class="buttons"> <a href=" https://calendly.com/metanoiahr/metanoia-chat-with-abdullah
+                    <button class="buttons nav-btn"> <a href=" https://calendly.com/metanoiahr/metanoia-chat-with-abdullah
 "> Book A Call</a></button>
                 </div>
 
