--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
                         <li class="lists"><a href="#faq">FAQs</a></li>
                         <li class="lists"><a href="#blogs">Blogs</a></li>
                     </ul>
-                    <button class="buttons nav-btn"> <a href=" https://calendly.com/metanoiahr/metanoia-chat-with-abdullah
+                    <button class="buttons"> <a href=" https://calendly.com/metanoiahr/metanoia-chat-with-abdullah
 "> Book A Call</a></button>
                 </div>
 
